--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^8.2.0",
     "es6-promisify": "^6.1.1",
     "express": "^4.16.4",
@@ -12,7 +13,6 @@
     "nodemon": "^2.0.3",
     "pug": "^3.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
